Do not re-set album thumbnail again from view, disable slot_AlbumHighlight

Closing bug 124688 now.

BUG: 124688

svn path=/trunk/extragear/graphics/digikam/; revision=533114